@@ -1,5 +1,6 @@
 Changes for 1.6.3
 
+ - [ZBX-716] fixed wrong caption for graph item editing form (Vedmak)
  - [ZBX-717] all templates linked to group Templates in default config (Sasha)
  - [ZBX-715] fixed "Invalid URL" error when choose History from history submenu (Vedmak)
  - [ZBX-713] fixed "values per second" having too many decimal places (Vedmak)
